started creating create program flow

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "react-bootstrap": "^2.7.4",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
